# claude-state-manager

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  config.example.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: run-tasks.md
.github/ISSUE_TEMPLATE/: ai-planned.md
.github/PULL_REQUEST_TEMPLATE/: ai-fix.md
src/auth/: session.py
src/dashboard/: styles.css
src/export/: csv_exporter.py
src/task_runner/: __main__.py  config.py  daemon.py  executor.py  git_manager.py  logging_config.py  models.py
src/task_runner/sources/: base.py  github_source.py
tests/: notification-test.md  test_session.py
